k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web # moet matchen met de label in object waarvoor je wilt doen, in dit geval van client-deployment.yaml
  ports: # If a pod inside the k8s cluster wants to access targetPort 3000 on the client-deployment container, it has to come in via port 3000
    - port: 3000
      targetPort: 3000
